update homepage a little

--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ theme: hugo-refresh
 assetDir: "static"
 
 # Option to specify the default language of the theme
-# I.e., the landing language of your root 
+# I.e., the landing language of your root
 DefaultContentLanguage: en
 
 ## Option to disable additional language in your site.
@@ -35,9 +35,9 @@ Taxonomies:
 # https://bulkitv2.cssninja.io/_components-icons-fa.html
 
 params:
-  # parameter used to specify the number of article in each row 
+  # parameter used to specify the number of article in each row
   # for the summary pages, the possible options are: 2, 3, 4, 5 or 6
-  articlesPerRow: 3 
+  articlesPerRow: 3
 
   # option to specify the favicon image of the site
   # the path is relative to the folder "assetDir" of this configuration
@@ -59,7 +59,7 @@ params:
     # option to specify the default image in the summary list
     # the starting folder is configure in "assetDir" of this file
     defaultImage : "/images/trento-icon.jpg"
-  
+
   # loading options
   loading:
     # option to specify the loading image
@@ -69,7 +69,7 @@ params:
   # main pages options
   mainPage:
     # option to specify the main font of the theme
-    fontFamily: "Lato" 
+    fontFamily: "Lato"
 
   # sidebar options
   sidebar:
@@ -85,7 +85,7 @@ params:
     fontFamily: "Lato"
     # option to show the little logos on the side of the navbar items
     showIcons: false
-    
+
   # 404 page options
   pagNotFound:
     # option to specify the main picture of the sidebar
@@ -102,16 +102,16 @@ params:
   homepage:
     # this options let you specify if you want a link to the homepage
     # it can be: "none", "menu", "footer" or "menu+footer"
-    linkPosition: "menu+footer" 
+    linkPosition: "menu+footer"
     # this options let you specify the text of the link to the homepage
-    linkText: "Home"  
+    linkText: "Home"
     # option to specify the title in the homepage
-    title: Trento Console for SAP Applications
+    title: The single pane of glass for your SAP Applications
     # option to specify the subtitle in the homepage
     subtitle: |
-        A new open-source cloud-native web console aiming to improve the workday of SAP Applications administrators
+        Trento is an open-source cloud-native web console aiming to improve the workday of SAP Applications administrators
     # option to specify image in the homepage
-    image: "/images/trento-logo-stacked.svg" # worker.svg 
+    image: "/images/trento-logo-stacked.svg" # worker.svg
     # option to specify the width of the image in the homepage
     imageWidth: 500px
 
@@ -121,35 +121,35 @@ params:
     # the starting folder is configure in "assetDir" of this file
     logo: "/images/trento-logo-horizontal.svg"
     # option to specify your contact email in the footer
-    email: 
+    email:
       link: trento-project@suse.com
       title: trento-project@suse.com
     # option to specify your linkedin profile in the footer
-    # linkedin: 
+    # linkedin:
     #   link: your_linkedin_profile
     #   title: My LinkedIn
-    # # option to specify your facebook account in the footer; 
+    # # option to specify your facebook account in the footer;
     # **uncomment** the lines below to show in footer
-    # facebook: 
+    # facebook:
     #   link: your.username
     #   title: Facebook
-    # option to specify your github account in the footer; 
+    # option to specify your github account in the footer;
     # **uncomment** the below lines to show in footer
-    github: 
-       link: trento-project/trento
-       title: Github
-    # option to specify your twitter username in the footer; 
+    github:
+       link: trento-project
+       title: GitHub
+    # option to specify your twitter username in the footer;
     # **uncomment** the below lines to show in footer
-    # twitter: 
+    # twitter:
     #    link: username
     #    title: Twitter
-    # option to specify your instagram username in the footer; 
+    # option to specify your instagram username in the footer;
     # **uncomment** the below lines to show in footer
-    # instagram: 
+    # instagram:
     #    link: username
     #    title: Instagram
     # option to specify the copyright in the footer
-    copyright: 2019 - 2021 SUSE LLC
+    copyright: 2019 - 2022 SUSE LLC
 
 ###################################################################
 ################## multilanguage support options ##################
@@ -158,4 +158,3 @@ languages:
   en:
     languageName:       English
     weight:             1
-      
