--- a/config.yaml
+++ b/config.yaml
@@ -18,12 +18,15 @@ DefaultContentLanguage: en
 ## Option to disable additional language in your site.
 # disableLanguages: ["ru"]
 
-disableKinds: ["sitemap","RSS", 'taxonomy', 'term']
+disableKinds: ["sitemap","RSS"]
 
 # Option to specify that all links will be open in a new tab.
 blackfriday:
   hrefTargetBlank: true
 
+taxonomies:
+  release: 'releases'
+  
 # Supported fonts are:
 # https://fonts.google.com/
 
