rename releases to blog, remove taxonomies to fix template lookup

--- a/config.yaml
+++ b/config.yaml
@@ -18,14 +18,13 @@ DefaultContentLanguage: en
 ## Option to disable additional language in your site.
 # disableLanguages: ["ru"]
 
-disableKinds: ["sitemap","RSS"]
+disableKinds: ["sitemap", "RSS", "taxonomy", "term"]
+
+pluralizeListTitles: false
 
 # Option to specify that all links will be open in a new tab.
 blackfriday:
   hrefTargetBlank: true
-
-taxonomies:
-  release: 'releases'
   
 # Supported fonts are:
 # https://fonts.google.com/
